--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,34 +26,12 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-/* ------------------------------------------------------ */
-/* Spinner */
-/* .custom_loader {
-  margin: 7px 0 7px;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  background-color: #fff;
-  box-shadow: 32px 0 #fff, -32px 0 #fff;
-  position: relative;
-  animation: flash 0.3s ease-out infinite alternate;
+button:disabled {
+  @apply border-gray-800 bg-gray-800 cursor-progress hover:bg-gray-800 hover:border-gray-800;
 }
 
-@keyframes flash {
-  0% {
-    background-color: #fff2;
-    box-shadow: 32px 0 #fff2, -32px 0 #fff;
-  }
-  50% {
-    background-color: #fff;
-    box-shadow: 32px 0 #fff2, -32px 0 #fff2;
-  }
-  100% {
-    background-color: #fff2;
-    box-shadow: 32px 0 #fff, -32px 0 #fff2;
-  }
-} */
-
+/* ------------------------------------------------------ */
+/* Spinner */
 .custom_loader {
   width: 24px;
   height: 24px;
